--- a/gradle.properties
+++ b/gradle.properties
@@ -37,8 +37,10 @@ VERSION_MINOR=9
 VERSION_PATCH=2
 ######### version for SW libraries #########
 SW_CORE_FOR_PROTOTYPE=3.9.1-r131121
+SW_HARDWARE_FOR_PROTOTYPE=3.9.1-r131121
 COMPOSE_VERSION=1.1.1
-GRADLE_VERSION=7.0.4
+GRADLE_VERSION=7.2.0
 CORE_KTX_VERSION=1.7.0
 ACTIVITY_COMPOSE_VERSION=1.3.1
+APP_ID=com.example.myapplication
 
