--- a/settings.gradle
+++ b/settings.gradle
@@ -1,10 +1,25 @@
+import org.gradle.api.initialization.resolve.RepositoriesMode
+
+pluginManagement {
+    repositories {
+        gradlePluginPortal()
+        google()
+        mavenCentral()
+    }
+}
 enableFeaturePreview('VERSION_CATALOGS')
-
-
 dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        mavenLocal()
+        google()
+        mavenCentral()
+    }
     versionCatalogs {
         libs {
             alias('sw-core').to("com.streamwide:swcore:${SW_CORE_FOR_PROTOTYPE}")
+            alias('sw-voip').to("com.streamwide.smartms.voip:release:2.6.50")
+            alias('sw-hardware').to("com.streamwide:swhardware:${SW_HARDWARE_FOR_PROTOTYPE}")
             alias('core-ktx').to("androidx.core:core-ktx:${CORE_KTX_VERSION}")
             alias('compose-ui').to("androidx.compose.ui:ui:${COMPOSE_VERSION}")
             alias('compose-material').to("androidx.compose.material:material:${COMPOSE_VERSION}")
@@ -16,4 +31,6 @@ dependencyResolutionManagement {
         }
     }
 }
+
 include ':app'
+
