working contact list

--- a/gradle.properties
+++ b/gradle.properties
@@ -43,4 +43,6 @@ GRADLE_VERSION=7.2.0
 CORE_KTX_VERSION=1.7.0
 ACTIVITY_COMPOSE_VERSION=1.3.1
 APP_ID=com.example.myapplication
+GRADE_BUILD_VERSION=7.0.4
+HILT_VERSION=2.38.1
 
