--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,9 @@ buildscript {
     }
     dependencies {
         classpath "com.android.tools.build:gradle:$GRADE_BUILD_VERSION"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$HILT_VERSION"
+
+
 
 
 
