--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,9 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
+    id 'dagger.hilt.android.plugin'
+
 
 
 }
@@ -59,5 +62,8 @@ dependencies {
     implementation(libs.compose.ui)
     implementation(libs.core.ktx)
     implementation(libs.compose.tooling)
+    implementation (libs.hilt.android)
+    kapt (libs.hilt.compiler)
+
 
 }
