--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,6 @@ plugins {
     id 'dagger.hilt.android.plugin'
 
 
-
 }
 
 android {
@@ -23,7 +22,7 @@ android {
             useSupportLibrary true
         }
         ndk {
-            abiFilters "arm64-v8a","armeabi-v7a"
+            abiFilters "arm64-v8a", "armeabi-v7a"
         }
         manifestPlaceholders = [
                 'appAuthRedirectScheme': "$APP_ID"
@@ -62,8 +61,9 @@ dependencies {
     implementation(libs.compose.ui)
     implementation(libs.core.ktx)
     implementation(libs.compose.tooling)
-    implementation (libs.hilt.android)
-    kapt (libs.hilt.compiler)
+    implementation(libs.hilt.android)
+    kapt(libs.hilt.compiler)
+    testImplementation(libs.junit)
 
 
 }
