--- a/gradle.properties
+++ b/gradle.properties
@@ -45,4 +45,5 @@ ACTIVITY_COMPOSE_VERSION=1.3.1
 APP_ID=com.example.myapplication
 GRADE_BUILD_VERSION=7.0.4
 HILT_VERSION=2.38.1
+JUNIT_VERSION=4.13.2
 
