--- a/settings.gradle
+++ b/settings.gradle
@@ -29,7 +29,7 @@ dependencyResolutionManagement {
             alias('compose-activity').to("androidx.activity:activity-compose:${ACTIVITY_COMPOSE_VERSION}")
             alias('hilt-android').to("com.google.dagger:hilt-android:$HILT_VERSION")
             alias('hilt-compiler').to("com.google.dagger:hilt-compiler:$HILT_VERSION")
-
+           alias('junit').to( "junit:junit:$JUNIT_VERSION")
 
         }
     }
