--- a/gradle.properties
+++ b/gradle.properties
@@ -46,4 +46,4 @@ APP_ID=com.example.myapplication
 GRADE_BUILD_VERSION=7.0.4
 HILT_VERSION=2.38.1
 JUNIT_VERSION=4.13.2
-
+HILT_NAVIGATION_COMPOSE_VERSION=1.0.0
