--- a/gradle.properties
+++ b/gradle.properties
@@ -47,3 +47,4 @@ GRADE_BUILD_VERSION=7.0.4
 HILT_VERSION=2.38.1
 JUNIT_VERSION=4.13.2
 HILT_NAVIGATION_COMPOSE_VERSION=1.0.0
+COIL_COMPOSE_VERSION=1.3.1
