--- a/settings.gradle
+++ b/settings.gradle
@@ -29,8 +29,9 @@ dependencyResolutionManagement {
             alias('compose-activity').to("androidx.activity:activity-compose:${ACTIVITY_COMPOSE_VERSION}")
             alias('hilt-android').to("com.google.dagger:hilt-android:$HILT_VERSION")
             alias('hilt-compiler').to("com.google.dagger:hilt-compiler:$HILT_VERSION")
-           alias('junit').to( "junit:junit:$JUNIT_VERSION")
-           alias('hilt-navigation-compose').to( "androidx.hilt:hilt-navigation-compose:$HILT_NAVIGATION_COMPOSE_VERSION")
+            alias('junit').to("junit:junit:$JUNIT_VERSION")
+            alias('hilt-navigation-compose').to("androidx.hilt:hilt-navigation-compose:$HILT_NAVIGATION_COMPOSE_VERSION")
+            alias('coil-compose').to("io.coil-kt:coil-compose:$COIL_COMPOSE_VERSION")
 
         }
     }
