--- a/gradle.properties
+++ b/gradle.properties
@@ -49,3 +49,5 @@ JUNIT_VERSION=4.13.2
 HILT_NAVIGATION_COMPOSE_VERSION=1.0.0
 COIL_COMPOSE_VERSION=1.3.1
 GSON_VERSION=2.9.0
+paging_version = 3.1.1
+paging_version_compose=1.0.0-alpha14
