--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,13 @@ dependencies {
     implementation(libs.hilt.navigation.compose)
     implementation(libs.coil.compose)
     implementation(libs.gson)
+    implementation(libs.paging.runtime)
+    implementation(libs.paging.rxjava2)
+    implementation(libs.paging.rxjava3)
+    implementation(libs.paging.guava)
+    implementation(libs.paging.compose)
+
+
 
 
 }
