--- a/gradle.properties
+++ b/gradle.properties
@@ -42,7 +42,7 @@ COMPOSE_VERSION=1.1.1
 GRADLE_VERSION=7.2.0
 CORE_KTX_VERSION=1.7.0
 ACTIVITY_COMPOSE_VERSION=1.3.1
-APP_ID=com.example.myapplication
+APP_ID=com.call.myapplication
 GRADE_BUILD_VERSION=7.0.4
 HILT_VERSION=2.38.1
 JUNIT_VERSION=4.13.2
