Handles missed voip messages

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -72,8 +72,7 @@ dependencies {
     implementation(libs.paging.rxjava3)
     implementation(libs.paging.guava)
     implementation(libs.paging.compose)
-
-
+    implementation(libs.accompanist)
 
 
 }
