--- a/settings.gradle
+++ b/settings.gradle
@@ -40,7 +40,7 @@ dependencyResolutionManagement {
             alias('paging-guava').to("androidx.paging:paging-guava:$paging_version")
             alias('paging-compose').to("androidx.paging:paging-compose:$paging_version_compose")
 
-
+            alias('accompanist').to("com.google.accompanist:accompanist-permissions:$accompanist_version")
 
 
         }
