--- a/gradle.properties
+++ b/gradle.properties
@@ -52,3 +52,5 @@ GSON_VERSION=2.9.0
 paging_version=3.1.1
 paging_version_compose=1.0.0-alpha14
 accompanist_version=0.24.9-beta
+font_awesome_compose_version=1.0.0
+SMARTMS_VOIP_PROTOTYPE=release:2.6.50
