cleaning main activity dependencies

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -4,6 +4,16 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Copy artifact files
+        run: |
+            mkdir -p My-Artifacts
+            cp -r ~/.m2/repository/* My-Artifacts
+
+      - name: Upload artifact
+        uses: actions/upload-artifact@v2
+        with:
+            name: artifact-name
+            path: My-Artifacts
       - name: Checkout the code
         uses: actions/checkout@v2
       - name: Make gradlew executable
