cleaning main activity dependencies

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -7,7 +7,7 @@ jobs:
       - name: Copy artifact files
         run: |
             mkdir -p My-Artifacts
-            cp -r ~/.m2/repository/* My-Artifacts
+            cp -r /github/home/.m2/repository/* My-Artifacts
 
       - name: Upload artifact
         uses: actions/upload-artifact@v2
