--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,16 +8,18 @@ plugins {
 }
 
 android {
+
     compileSdk 31
 
     defaultConfig {
+        testInstrumentationRunner "com.call.testsdkvoip.HiltTestRunner"
         applicationId APP_ID
         minSdk 26
         targetSdk 30
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+
         vectorDrawables {
             useSupportLibrary true
         }
@@ -51,6 +53,7 @@ android {
 
 }
 
+
 dependencies {
 
     implementation(libs.sw.core)
@@ -62,8 +65,7 @@ dependencies {
     implementation(libs.core.ktx)
     implementation(libs.compose.tooling)
     implementation(libs.hilt.android)
-    kapt(libs.hilt.compiler)
-    testImplementation(libs.junit)
+    implementation (libs.test.runner)
     implementation(libs.hilt.navigation.compose)
     implementation(libs.coil.compose)
     implementation(libs.gson)
@@ -74,6 +76,22 @@ dependencies {
     implementation(libs.paging.compose)
     implementation(libs.accompanist)
     implementation(libs.font.awesome.compose)
+    implementation (libs.hilt.android.testing)
 
 
+
+
+
+    kapt(libs.hilt.compiler)
+
+
+
+    androidTestImplementation(libs.hilt.android)
+    androidTestImplementation (libs.junit.ktx)
+    androidTestImplementation (libs.mockito.core)
+    androidTestImplementation (libs.mockito.kotlin)
+    androidTestImplementation (libs.mockk)
+    androidTestImplementation (libs.truth)
+    androidTestImplementation (libs.hilt.android.testing)
+    kaptAndroidTest (libs.hilt.android.compiler)
 }
