--- a/gradle.properties
+++ b/gradle.properties
@@ -54,3 +54,11 @@ paging_version_compose=1.0.0-alpha14
 accompanist_version=0.24.9-beta
 font_awesome_compose_version=1.0.0
 SMARTMS_VOIP_PROTOTYPE=release:2.6.50
+mockkVersion=1.12.4
+mockitoKotlinVersion=4.0.0
+mockitoVersion=4.6.1
+truthVersion=1.1.3
+hilt_android_testing=2.38.1
+junit_ktx=1.1.3
+robolectric_version=4.8.1
+runner_version=1.4.0
