--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:launchMode="http://schemas.android.com/apk/distribution"
     package="com.call.testsdkvoip">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -26,6 +27,7 @@
 
         <activity
             android:name=".MainActivity"
+            android:launchMode="singleTop"
             android:exported="true"
             android:theme="@style/Theme.TestSdkVoip">
             <intent-filter>
@@ -34,6 +36,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <service android:name=".presentation.services.SmartMsMainService" />
     </application>
 
 </manifest>
